--- a/main.css
+++ b/main.css
@@ -49,6 +49,22 @@ body {
   border-radius: 8px;
 }
 
+.plan__title {
+  color: #0e4f1f;
+}
+
+.plan__price {
+  color: #858585;
+}
+
+.plan--highlighted .plan__title {
+  color: #fff;
+}
+
+.plan--highlighted .plan__price {
+  color: #0e4f1f;
+}
+
 .plan__features {
   list-style: none;
   margin: 0;
@@ -59,6 +75,22 @@ body {
   margin: 8px 0;
 }
 
+.button {
+  background-color: #0e4f1f;
+  color: #fff;
+  font: inherit;
+  border: 1.5px solid #0e4f1f;
+  padding: 8px;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.button:hover,
+.button:active {
+  background-color: #fff;
+  color: #0e4f1f;
+}
 div > p {
   color: red;
 }
