--- a/assets/main.css
+++ b/assets/main.css
@@ -21,7 +21,13 @@ body {
 }
 
 .section-title {
-  color: #2ddf5c;
+  color: #0d6efd;
+  text-align: center;
+}
+
+.plan__list {
+  width: 80%;
+  margin: auto;
   text-align: center;
 }
 
@@ -36,14 +42,14 @@ body {
 }
 
 .plan--highlighted {
-  background-color: #19b84c;
+  background-color: #0d6efd;
   color: #fff;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .plan__annotation {
   background-color: #fff;
-  color: #19b84c;
+  color: #0d6efd;
   padding: 8px;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
   border-radius: 8px;
@@ -62,7 +68,7 @@ body {
 }
 
 .plan--highlighted .plan__price {
-  color: #0e4f1f;
+  color: #fff;
 }
 
 .plan__features {
@@ -76,7 +82,7 @@ body {
 }
 
 #key-features {
-  background-color: #ff1b68;
+  background-color: #085ddd;
   margin-top: 80px;
   padding: 16px;
 }
