--- a/packages/packages.css
+++ b/packages/packages.css
@@ -5,7 +5,7 @@ main {
 .package {
   width: 80%;
   margin: 16px 0;
-  border: 4px solid #0e4f1f;
+  border: 4px solid #0d6efd;
   border-left: none;
 }
 
@@ -22,9 +22,9 @@ main {
 
 .package__info {
   padding: 16px;
-  border: 1px solid #0e4f1f;
+  border: 1px solid #0d6efd;
   font-size: 20px;
-  color: #0e4f1f;
+  color: #0d6efd;
   background: #fff;
 }
 
@@ -34,12 +34,25 @@ main {
   border-color: #ff5454;
 }
 
+.clearfix {
+  clear: both;
+}
+
 #plus {
   background-color: rgba(213, 255, 220, 0.95);
 }
 
 #free {
   background-color: rgba(234, 252, 237, 0.95);
+  border-right: none;
+  border-left: 4px solid #0e4f1f;
+  text-align: right;
+  float: right;
+}
+
+#free:hover,
+#free:active {
+  border-left-color: #ff5454;
 }
 
 #premium {
