--- a/assets/secondary.css
+++ b/assets/secondary.css
@@ -9,9 +9,13 @@ body {
 }
 
 .main-header {
+  top: 0;
+  left: 0;
   background-color: #0d6efd;
   padding: 8px 16px;
   width: 100%;
+  position: fixed;
+  z-index: 1;
 }
 
 .main-header > div {
