--- a/packages/packages.css
+++ b/packages/packages.css
@@ -2,11 +2,20 @@ main {
   padding-top: 32px;
 }
 
+.background {
+  background: url("../assets/plans-background.jpg");
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  position: fixed;
+}
+
 .package {
   width: 80%;
   margin: 16px 0;
   border: 4px solid #0d6efd;
   border-left: none;
+  position: relative;
 }
 
 .package a {
@@ -14,6 +23,17 @@ main {
   color: inherit;
   display: block;
   padding: 32px;
+}
+
+.package__badge {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 20px;
+  font-size: 12px;
+  color: #fff;
+  background: #ff5454;
+  padding: 8px;
 }
 
 .package__subtitle {
