--- a/assets/main.css
+++ b/assets/main.css
@@ -9,15 +9,22 @@ body {
 }
 
 #product-overview {
-  background: url("../assets/freedom.jpg");
+  background-image: url("../assets/freedom.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   width: 100%;
   height: 528px;
   padding: 10px;
+  margin-top: 43px;
+  position: relative;
 }
 
 #product-overview h1 {
   color: white;
   font-family: "Anton", sans-serif;
+  position: absolute;
+  bottom: 5%;
+  left: 3%;
 }
 
 .section-title {
