--- a/assets/main.css
+++ b/assets/main.css
@@ -9,13 +9,15 @@ body {
 }
 
 #product-overview {
-  background: url("../assets/freedom.jpg") left 10% bottom 20% / cover no-repeat;
+  background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
+    url("../assets/freedom.jpg") left 10% bottom 20% / cover no-repeat, #ff1b68;
   /*background-size: cover;
   background-position: left 10% bottom 20%; 
   background-repeat: no-repeat; 
   background-origin: border-box;
   background-clip: border-box; */
- 
+  /* background-image: linear-gradient(180deg, red, transparent); */
+  /* background-image: radial-gradient(circle 20px at 20% 50%, red, blue, green); */
   width: 100%;
   height: 528px;
   padding: 10px;
