--- a/packages/packages.css
+++ b/packages/packages.css
@@ -3,7 +3,8 @@ main {
 }
 
 .background {
-  background: url("../assets/plans-background.jpg");
+  background: url("../assets/plans-background.jpg") center/cover;
+  filter: grayscale(40%);
   width: 100%;
   height: 100%;
   z-index: -1;
